# homa

./: .gitignore  .prettierrc  .secrets.env.example  Cargo.toml  README.md  build.rs  index.html  package.json  tsconfig.json  vite.config.ts  vite.ts
.github/workflows/: deploy.yml
app/: all.json  icons.tsx  index.html  index.tsx  models.ts
app/admin/: general.tsx  index.tsx  stars.tsx  users.tsx
app/admin/style/: index.scss  stars.scss  users.scss
app/comps/: alert.tsx  index.ts  select.tsx
app/comps/style/: alert.scss  fanel.scss  (+1 more)
app/icons/: action.tsx  circle.tsx  general.tsx  index.tsx
app/layout/: 404.tsx  country-list.ts  dash.tsx  home.tsx  login.tsx  messages.tsx  nav.tsx  orders.tsx  profile.tsx  service-list.ts  shop.tsx  transactions.tsx
app/shared/: datetime.ts  dpy.tsx  httpx.ts  index.ts  service-list.ts
app/shop/: stars.tsx  vnum.tsx
app/store/: index.ts  prices.ts  self.ts  sidebar.ts
app/style/: fonts.scss  index.scss
bot/: .env.example  Cargo.toml  build.rs
bot/src/: api.rs  callback.rs  commands.rs  config.rs  main.rs  menu.rs  state.rs  tools.rs  types.rs  utils.rs
config/: deploy.sh  nginx.conf  thora.bot.service  thora.web.service
web/: .env.example  Cargo.toml
web/migrations/: 0001_init.sql  0002_vnum.sql
web/src/: config.rs  docs.rs  general.rs  main.rs  models.rs  utils.rs  vendor.rs
web/src/admin/: general.rs  mod.rs  stars.rs  users.rs
web/src/api/: admin.rs  auth.rs  mod.rs  stars.rs  user.rs  vendor.rs  vnum.rs
web/src/models/: common.rs  error.rs  message.rs  mod.rs  order.rs  transaction.rs  user.rs
(+19 files in other folders)
