[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
indoc = "2.0.5"
log = "0.4.22"
pretty_env_logger = "0.5.0"
tokio = { version = "1.39.3", features = ["full"] }
dotenvy = "0.15.7"
serde = "1.0.208"
serde_json = "1.0.125"
reqwest = { version = "0.11.27", features = ["socks"] }
chrono = { version = "0.4.38", features = ["serde"] }
teloxide = { version = "0.13.0", features = ["full"] }
