[package]
name = "web"
version.workspace = true
edition.workspace = true

[dependencies]
log = "0.4"
# rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
# hex = "0.4"
awc = { version =  "3.4", features = ["openssl"]}
utoipa = { version = "4", features = ["actix_extras", "debug"] }
actix-web = "4"
actix-utils = "3"
actix-web-httpauth = "0.8"
actix-files = "0.6"
actix-multipart = "0.6"
dotenvy = "0.15"
pretty_env_logger = "0.4"
tokio = { version = "1", features = ["full"] }
serde = "1"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
sqlx-cli = { version = "0.7", features = ["sqlite", "completions"] }

[dependencies.sqlx]
version = "0.7"
features = [
    "sqlite",
    "runtime-tokio",
    "tls-native-tls",
    "chrono",
]
